--- a/src/server/views/product.html
+++ b/src/server/views/product.html
@@ -70,7 +70,8 @@
             <input type="text" class="form-control" name="cvv" id="cvv" placeholder="Security Code">
           </div>
         </div>
-        <input type="hidden" name="price" value="{{productInfo.productPrice}}")
+        <input type="hidden" name="name" value="{{productInfo.productName}}">
+        <input type="hidden" name="price" value="{{productInfo.productPrice}}">
         <div class="form-group">
           <div class="col-sm-offset-3 col-sm-9">
             <button type="submit" id="submit-btn" class="btn btn-success">Pay Now</button>
