--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -10,8 +10,8 @@
     {% block content %}
     {% endblock %}
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//js.stripe.com/v2/"></script>
     <script type="text/javascript" src="/js/main.js"></script>
   </body>
 </html>
